compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    COMMENT
    DOT
    NULL

Grammar

Rule 0     S' -> PROG
Rule 1     EMPTY -> <empty>
Rule 2     MAIN -> PRINCIPAL r_flush_mem LPAREN RPAREN BLOQUE
Rule 3     PROG -> r_new_goto PROGRAMA ID SEMI_COLON VARS r_change_local_context FUNCTION r_complete_goto r_change_global_context r_display_var_table MAIN r_display_const
Rule 4     VARS -> VAR TIPO
Rule 5     VARS -> EMPTY
Rule 6     TIPO -> INT r_set_var_type VAR_INT SEMI_COLON TIPO
Rule 7     TIPO -> FLOAT r_set_var_type VAR_TIPO SEMI_COLON TIPO
Rule 8     TIPO -> CHAR r_set_var_type VAR_TIPO SEMI_COLON TIPO
Rule 9     TIPO -> EMPTY
Rule 10    VAR_INT -> LIST_ID COMMA VAR_INT
Rule 11    VAR_INT -> ID r_new_variable COMMA VAR_INT
Rule 12    VAR_INT -> LIST_ID
Rule 13    VAR_INT -> ID r_new_variable
Rule 14    VAR_TIPO -> ID r_new_variable COMMA
Rule 15    VAR_TIPO -> ID r_new_variable
Rule 16    LIST_ID -> ID r_new_arr LSQ CTE_I r_new_dim RSQ r_generate_arr r_clear_arr
Rule 17    LIST_ID -> ID r_new_arr LSQ CTE_I r_new_dim RSQ LSQ CTE_I r_new_dim RSQ r_generate_arr r_clear_arr
Rule 18    EXPRESION -> TLEVEL_EXPRESION r_new_quadruple EXPRESION_AUX
Rule 19    EXPRESION_AUX -> COMPAR r_new_operator EXPRESION
Rule 20    EXPRESION_AUX -> AND r_new_operator EXPRESION
Rule 21    EXPRESION_AUX -> OR r_new_operator EXPRESION
Rule 22    EXPRESION_AUX -> EMPTY
Rule 23    TLEVEL_EXPRESION -> SLEVEL_EXPRESION r_new_quadruple_tlevel TLEVEL_EXPRESION_AUX
Rule 24    TLEVEL_EXPRESION_AUX -> NOT_EQ r_new_operator TLEVEL_EXPRESION
Rule 25    TLEVEL_EXPRESION_AUX -> GREATER_EQ r_new_operator TLEVEL_EXPRESION
Rule 26    TLEVEL_EXPRESION_AUX -> LESS_EQ r_new_operator TLEVEL_EXPRESION
Rule 27    TLEVEL_EXPRESION_AUX -> GREATER r_new_operator TLEVEL_EXPRESION
Rule 28    TLEVEL_EXPRESION_AUX -> LESS r_new_operator TLEVEL_EXPRESION
Rule 29    TLEVEL_EXPRESION_AUX -> EMPTY
Rule 30    SLEVEL_EXPRESION -> FLEVEL_EXPRESION r_new_quadruple_slevel SLEVEL_EXPRESION_AUX
Rule 31    SLEVEL_EXPRESION_AUX -> PLUS r_new_operator SLEVEL_EXPRESION
Rule 32    SLEVEL_EXPRESION_AUX -> MINUS r_new_operator SLEVEL_EXPRESION
Rule 33    SLEVEL_EXPRESION_AUX -> EMPTY
Rule 34    FLEVEL_EXPRESION -> VALUE_EXPRESION r_new_quadruple_flevel FLEVEL_EXPRESION_AUX
Rule 35    FLEVEL_EXPRESION_AUX -> MULT r_new_operator FLEVEL_EXPRESION
Rule 36    FLEVEL_EXPRESION_AUX -> DIV r_new_operator FLEVEL_EXPRESION
Rule 37    FLEVEL_EXPRESION_AUX -> EMPTY
Rule 38    VALUE_EXPRESION -> ID r_new_id
Rule 39    VALUE_EXPRESION -> ID r_new_det DET
Rule 40    VALUE_EXPRESION -> ID r_new_tran TRAN
Rule 41    VALUE_EXPRESION -> ID r_new_inv INV
Rule 42    VALUE_EXPRESION -> ARR
Rule 43    VALUE_EXPRESION -> CONSTANTE
Rule 44    VALUE_EXPRESION -> LLAMADA
Rule 45    VALUE_EXPRESION -> r_new_lparen LPAREN EXPRESION RPAREN r_new_rparen
Rule 46    CONSTANTE -> CTE_I r_new_c_int
Rule 47    CONSTANTE -> CTE_F r_new_c_float
Rule 48    CONSTANTE -> CTE_C r_new_c_char
Rule 49    CONSTANTE -> CTE_S r_new_c_string
Rule 50    BLOQUE -> LBRACKET OPCION_BLOQUE RBRACKET
Rule 51    OPCION_BLOQUE -> LECTURA SEMI_COLON OPCION_BLOQUE
Rule 52    OPCION_BLOQUE -> ESCRITURA SEMI_COLON OPCION_BLOQUE
Rule 53    OPCION_BLOQUE -> LLAMADA SEMI_COLON OPCION_BLOQUE
Rule 54    OPCION_BLOQUE -> IF_STMT OPCION_BLOQUE
Rule 55    OPCION_BLOQUE -> IF_ELSE_STMT OPCION_BLOQUE
Rule 56    OPCION_BLOQUE -> MIENTRAS_CICLO OPCION_BLOQUE
Rule 57    OPCION_BLOQUE -> DESDE_CICLO OPCION_BLOQUE
Rule 58    OPCION_BLOQUE -> ASIGNACION SEMI_COLON OPCION_BLOQUE
Rule 59    OPCION_BLOQUE -> RETURN_STM SEMI_COLON OPCION_BLOQUE
Rule 60    OPCION_BLOQUE -> EMPTY
Rule 61    FUNCTION -> r_new_function FUNCION TIPO_FUNC r_clear_mem ID r_set_fun_name r_new_vartable LPAREN PARAMETROS RPAREN VARS r_insert_parameters BLOQUE r_end_function FUNCTION
Rule 62    FUNCTION -> EMPTY
Rule 63    TIPO_FUNC -> INT r_set_fun_type
Rule 64    TIPO_FUNC -> FLOAT r_set_fun_type
Rule 65    TIPO_FUNC -> CHAR r_set_fun_type
Rule 66    TIPO_FUNC -> VOID r_set_fun_type
Rule 67    PARAMETROS -> AUX_PARAM
Rule 68    PARAMETROS -> EMPTY
Rule 69    ARR -> ID r_register_arr LSQ r_new_lparen SLEVEL_EXPRESION r_new_rparen RSQ r_quad_arr
Rule 70    ARR -> ID r_register_arr LSQ r_new_lparen SLEVEL_EXPRESION r_new_rparen RSQ LSQ r_new_lparen SLEVEL_EXPRESION r_new_rparen RSQ r_quad_arr
Rule 71    AUX_PARAM -> INT r_set_var_type r_insert_type ID r_new_variable NEXT_PARAM
Rule 72    AUX_PARAM -> FLOAT r_set_var_type r_insert_type ID r_new_variable NEXT_PARAM
Rule 73    AUX_PARAM -> CHAR r_set_var_type r_insert_type ID r_new_variable NEXT_PARAM
Rule 74    NEXT_PARAM -> COMMA AUX_PARAM
Rule 75    NEXT_PARAM -> EMPTY
Rule 76    RETURN_STM -> RETURN LPAREN EXPRESION RPAREN r_generate_return
Rule 77    DESDE_CICLO -> DESDE ID r_new_id_for EQ r_new_operator CTE_I r_new_c_int r_new_equal HASTA CTE_I r_new_c_int r_new_migajita r_compara_for HACER r_new_gotof BLOQUE r_update_for r_new_goto r_complete_gotof r_clear_for
Rule 78    MIENTRAS_CICLO -> MIENTRAS r_new_migajita LPAREN EXPRESION RPAREN r_new_gotof HAZ BLOQUE r_new_goto r_complete_gotof
Rule 79    LECTURA -> LEE LPAREN PARAMETRO_LECTURA RPAREN
Rule 80    PARAMETRO_LECTURA -> PARAMETRO_LECTURA_AUX
Rule 81    PARAMETRO_LECTURA -> EMPTY
Rule 82    PARAMETRO_LECTURA_AUX -> EXPRESION r_new_read
Rule 83    PARAMETRO_LECTURA_AUX -> EXPRESION r_new_read COMMA PARAMETRO_LECTURA_AUX
Rule 84    ESCRITURA -> ESCRIBE LPAREN PARAMETRO_ESCRITURA RPAREN
Rule 85    PARAMETRO_ESCRITURA -> PARAMETRO_ESCRITURA_AUX
Rule 86    PARAMETRO_ESCRITURA -> EMPTY
Rule 87    PARAMETRO_ESCRITURA_AUX -> EXPRESION r_new_write
Rule 88    PARAMETRO_ESCRITURA_AUX -> EXPRESION r_new_write COMMA PARAMETRO_ESCRITURA_AUX
Rule 89    LLAMADA -> ID r_verify_function r_generate_era LPAREN r_new_lparen TIPO_PARAMETROS r_new_rparen RPAREN r_verify_last_parameter r_generate_gosub
Rule 90    TIPO_PARAMETROS -> TIPO_PARAMETROS_AUX
Rule 91    TIPO_PARAMETROS -> EMPTY
Rule 92    TIPO_PARAMETROS_AUX -> EXPRESION r_verify_parameter
Rule 93    TIPO_PARAMETROS_AUX -> EXPRESION r_verify_parameter COMMA TIPO_PARAMETROS_AUX
Rule 94    IF_STMT -> SI LPAREN EXPRESION RPAREN r_new_gotof ENTONCES BLOQUE r_complete_gotof
Rule 95    IF_ELSE_STMT -> SI LPAREN EXPRESION RPAREN r_new_gotof ENTONCES BLOQUE r_new_goto r_complete_gotof SINO BLOQUE r_complete_goto
Rule 96    ASIGNACION -> EXPRESION ASIGNACION_AUX r_new_equal
Rule 97    ASIGNACION_AUX -> EQ r_new_operator ASIGNACION
Rule 98    ASIGNACION_AUX -> EMPTY
Rule 99    r_new_det -> <empty>
Rule 100   r_new_tran -> <empty>
Rule 101   r_new_inv -> <empty>
Rule 102   r_new_id -> <empty>
Rule 103   r_new_c_int -> <empty>
Rule 104   r_new_c_char -> <empty>
Rule 105   r_new_c_float -> <empty>
Rule 106   r_new_c_string -> <empty>
Rule 107   r_new_lparen -> <empty>
Rule 108   r_new_rparen -> <empty>
Rule 109   r_new_operator -> <empty>
Rule 110   r_new_quadruple_flevel -> <empty>
Rule 111   r_new_quadruple_slevel -> <empty>
Rule 112   r_new_quadruple_tlevel -> <empty>
Rule 113   r_new_quadruple -> <empty>
Rule 114   r_new_equal -> <empty>
Rule 115   r_new_goto -> <empty>
Rule 116   r_complete_goto -> <empty>
Rule 117   r_new_gotof -> <empty>
Rule 118   r_complete_gotof -> <empty>
Rule 119   r_new_migajita -> <empty>
Rule 120   r_new_id_for -> <empty>
Rule 121   r_compara_for -> <empty>
Rule 122   r_update_for -> <empty>
Rule 123   r_clear_for -> <empty>
Rule 124   r_clear_mem -> <empty>
Rule 125   r_new_function -> <empty>
Rule 126   r_insert_type -> <empty>
Rule 127   r_set_fun_type -> <empty>
Rule 128   r_set_fun_name -> <empty>
Rule 129   r_new_vartable -> <empty>
Rule 130   r_insert_parameters -> <empty>
Rule 131   r_end_function -> <empty>
Rule 132   r_flush_mem -> <empty>
Rule 133   r_verify_function -> <empty>
Rule 134   r_generate_era -> <empty>
Rule 135   r_verify_parameter -> <empty>
Rule 136   r_verify_last_parameter -> <empty>
Rule 137   r_generate_gosub -> <empty>
Rule 138   r_generate_return -> <empty>
Rule 139   r_set_var_type -> <empty>
Rule 140   r_new_variable -> <empty>
Rule 141   r_change_local_context -> <empty>
Rule 142   r_change_global_context -> <empty>
Rule 143   r_display_var_table -> <empty>
Rule 144   r_display_const -> <empty>
Rule 145   r_new_arr -> <empty>
Rule 146   r_new_dim -> <empty>
Rule 147   r_generate_arr -> <empty>
Rule 148   r_clear_arr -> <empty>
Rule 149   r_new_read -> <empty>
Rule 150   r_new_write -> <empty>
Rule 151   r_register_arr -> <empty>
Rule 152   r_quad_arr -> <empty>

Terminals, with rules where they appear

AND                  : 20
CHAR                 : 8 65 73
COLON                : 
COMMA                : 10 11 14 74 83 88 93
COMMENT              : 
COMPAR               : 19
CTE_C                : 48
CTE_F                : 47
CTE_I                : 16 17 17 46 77 77
CTE_S                : 49
DESDE                : 77
DET                  : 39
DIV                  : 36
DOT                  : 
ENTONCES             : 94 95
EQ                   : 77 97
ESCRIBE              : 84
FLOAT                : 7 64 72
FUNCION              : 61
GREATER              : 27
GREATER_EQ           : 25
HACER                : 77
HASTA                : 77
HAZ                  : 78
ID                   : 3 11 13 14 15 16 17 38 39 40 41 61 69 70 71 72 73 77 89
INT                  : 6 63 71
INV                  : 41
LBRACKET             : 50
LEE                  : 79
LESS                 : 28
LESS_EQ              : 26
LPAREN               : 2 45 61 76 78 79 84 89 94 95
LSQ                  : 16 17 17 69 70 70
MIENTRAS             : 78
MINUS                : 32
MULT                 : 35
NOT_EQ               : 24
NULL                 : 
OR                   : 21
PLUS                 : 31
PRINCIPAL            : 2
PROGRAMA             : 3
RBRACKET             : 50
RETURN               : 76
RPAREN               : 2 45 61 76 78 79 84 89 94 95
RSQ                  : 16 17 17 69 70 70
SEMI_COLON           : 3 6 7 8 51 52 53 58 59
SI                   : 94 95
SINO                 : 95
TRAN                 : 40
VAR                  : 4
VOID                 : 66
error                : 

Nonterminals, with rules where they appear

ARR                  : 42
ASIGNACION           : 58 97
ASIGNACION_AUX       : 96
AUX_PARAM            : 67 74
BLOQUE               : 2 61 77 78 94 95 95
CONSTANTE            : 43
DESDE_CICLO          : 57
EMPTY                : 5 9 22 29 33 37 60 62 68 75 81 86 91 98
ESCRITURA            : 52
EXPRESION            : 19 20 21 45 76 78 82 83 87 88 92 93 94 95 96
EXPRESION_AUX        : 18
FLEVEL_EXPRESION     : 30 35 36
FLEVEL_EXPRESION_AUX : 34
FUNCTION             : 3 61
IF_ELSE_STMT         : 55
IF_STMT              : 54
LECTURA              : 51
LIST_ID              : 10 12
LLAMADA              : 44 53
MAIN                 : 3
MIENTRAS_CICLO       : 56
NEXT_PARAM           : 71 72 73
OPCION_BLOQUE        : 50 51 52 53 54 55 56 57 58 59
PARAMETROS           : 61
PARAMETRO_ESCRITURA  : 84
PARAMETRO_ESCRITURA_AUX : 85 88
PARAMETRO_LECTURA    : 79
PARAMETRO_LECTURA_AUX : 80 83
PROG                 : 0
RETURN_STM           : 59
SLEVEL_EXPRESION     : 23 31 32 69 70 70
SLEVEL_EXPRESION_AUX : 30
TIPO                 : 4 6 7 8
TIPO_FUNC            : 61
TIPO_PARAMETROS      : 89
TIPO_PARAMETROS_AUX  : 90 93
TLEVEL_EXPRESION     : 18 24 25 26 27 28
TLEVEL_EXPRESION_AUX : 23
VALUE_EXPRESION      : 34
VARS                 : 3 61
VAR_INT              : 6 10 11
VAR_TIPO             : 7 8
r_change_global_context : 3
r_change_local_context : 3
r_clear_arr          : 16 17
r_clear_for          : 77
r_clear_mem          : 61
r_compara_for        : 77
r_complete_goto      : 3 95
r_complete_gotof     : 77 78 94 95
r_display_const      : 3
r_display_var_table  : 3
r_end_function       : 61
r_flush_mem          : 2
r_generate_arr       : 16 17
r_generate_era       : 89
r_generate_gosub     : 89
r_generate_return    : 76
r_insert_parameters  : 61
r_insert_type        : 71 72 73
r_new_arr            : 16 17
r_new_c_char         : 48
r_new_c_float        : 47
r_new_c_int          : 46 77 77
r_new_c_string       : 49
r_new_det            : 39
r_new_dim            : 16 17 17
r_new_equal          : 77 96
r_new_function       : 61
r_new_goto           : 3 77 78 95
r_new_gotof          : 77 78 94 95
r_new_id             : 38
r_new_id_for         : 77
r_new_inv            : 41
r_new_lparen         : 45 69 70 70 89
r_new_migajita       : 77 78
r_new_operator       : 19 20 21 24 25 26 27 28 31 32 35 36 77 97
r_new_quadruple      : 18
r_new_quadruple_flevel : 34
r_new_quadruple_slevel : 30
r_new_quadruple_tlevel : 23
r_new_read           : 82 83
r_new_rparen         : 45 69 70 70 89
r_new_tran           : 40
r_new_variable       : 11 13 14 15 71 72 73
r_new_vartable       : 61
r_new_write          : 87 88
r_quad_arr           : 69 70
r_register_arr       : 69 70
r_set_fun_name       : 61
r_set_fun_type       : 63 64 65 66
r_set_var_type       : 6 7 8 71 72 73
r_update_for         : 77
r_verify_function    : 89
r_verify_last_parameter : 89
r_verify_parameter   : 92 93

Parsing method: LALR

state 0

    (0) S' -> . PROG
    (3) PROG -> . r_new_goto PROGRAMA ID SEMI_COLON VARS r_change_local_context FUNCTION r_complete_goto r_change_global_context r_display_var_table MAIN r_display_const
    (115) r_new_goto -> .

    PROGRAMA        reduce using rule 115 (r_new_goto -> .)

    PROG                           shift and go to state 1
    r_new_goto                     shift and go to state 2

state 1

    (0) S' -> PROG .



state 2

    (3) PROG -> r_new_goto . PROGRAMA ID SEMI_COLON VARS r_change_local_context FUNCTION r_complete_goto r_change_global_context r_display_var_table MAIN r_display_const

    PROGRAMA        shift and go to state 3


state 3

    (3) PROG -> r_new_goto PROGRAMA . ID SEMI_COLON VARS r_change_local_context FUNCTION r_complete_goto r_change_global_context r_display_var_table MAIN r_display_const

    ID              shift and go to state 4


state 4

    (3) PROG -> r_new_goto PROGRAMA ID . SEMI_COLON VARS r_change_local_context FUNCTION r_complete_goto r_change_global_context r_display_var_table MAIN r_display_const

    SEMI_COLON      shift and go to state 5


state 5

    (3) PROG -> r_new_goto PROGRAMA ID SEMI_COLON . VARS r_change_local_context FUNCTION r_complete_goto r_change_global_context r_display_var_table MAIN r_display_const
    (4) VARS -> . VAR TIPO
    (5) VARS -> . EMPTY
    (1) EMPTY -> .

    VAR             shift and go to state 7
    PRINCIPAL       reduce using rule 1 (EMPTY -> .)
    FUNCION         reduce using rule 1 (EMPTY -> .)

    VARS                           shift and go to state 6
    EMPTY                          shift and go to state 8

state 6

    (3) PROG -> r_new_goto PROGRAMA ID SEMI_COLON VARS . r_change_local_context FUNCTION r_complete_goto r_change_global_context r_display_var_table MAIN r_display_const
    (141) r_change_local_context -> .

    PRINCIPAL       reduce using rule 141 (r_change_local_context -> .)
    FUNCION         reduce using rule 141 (r_change_local_context -> .)

    r_change_local_context         shift and go to state 9

state 7

    (4) VARS -> VAR . TIPO
    (6) TIPO -> . INT r_set_var_type VAR_INT SEMI_COLON TIPO
    (7) TIPO -> . FLOAT r_set_var_type VAR_TIPO SEMI_COLON TIPO
    (8) TIPO -> . CHAR r_set_var_type VAR_TIPO SEMI_COLON TIPO
    (9) TIPO -> . EMPTY
    (1) EMPTY -> .

    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    CHAR            shift and go to state 13
    PRINCIPAL       reduce using rule 1 (EMPTY -> .)
    FUNCION         reduce using rule 1 (EMPTY -> .)
    LBRACKET        reduce using rule 1 (EMPTY -> .)

    TIPO                           shift and go to state 10
    EMPTY                          shift and go to state 14

state 8

    (5) VARS -> EMPTY .

    PRINCIPAL       reduce using rule 5 (VARS -> EMPTY .)
    FUNCION         reduce using rule 5 (VARS -> EMPTY .)
    LBRACKET        reduce using rule 5 (VARS -> EMPTY .)


state 9

    (3) PROG -> r_new_goto PROGRAMA ID SEMI_COLON VARS r_change_local_context . FUNCTION r_complete_goto r_change_global_context r_display_var_table MAIN r_display_const
    (61) FUNCTION -> . r_new_function FUNCION TIPO_FUNC r_clear_mem ID r_set_fun_name r_new_vartable LPAREN PARAMETROS RPAREN VARS r_insert_parameters BLOQUE r_end_function FUNCTION
    (62) FUNCTION -> . EMPTY
    (125) r_new_function -> .
    (1) EMPTY -> .

    FUNCION         reduce using rule 125 (r_new_function -> .)
    PRINCIPAL       reduce using rule 1 (EMPTY -> .)

    FUNCTION                       shift and go to state 15
    r_new_function                 shift and go to state 16
    EMPTY                          shift and go to state 17

state 10

    (4) VARS -> VAR TIPO .

    PRINCIPAL       reduce using rule 4 (VARS -> VAR TIPO .)
    FUNCION         reduce using rule 4 (VARS -> VAR TIPO .)
    LBRACKET        reduce using rule 4 (VARS -> VAR TIPO .)


state 11

    (6) TIPO -> INT . r_set_var_type VAR_INT SEMI_COLON TIPO
    (139) r_set_var_type -> .

    ID              reduce using rule 139 (r_set_var_type -> .)

    r_set_var_type                 shift and go to state 18

state 12

    (7) TIPO -> FLOAT . r_set_var_type VAR_TIPO SEMI_COLON TIPO
    (139) r_set_var_type -> .

    ID              reduce using rule 139 (r_set_var_type -> .)

    r_set_var_type                 shift and go to state 19

state 13

    (8) TIPO -> CHAR . r_set_var_type VAR_TIPO SEMI_COLON TIPO
    (139) r_set_var_type -> .

    ID              reduce using rule 139 (r_set_var_type -> .)

    r_set_var_type                 shift and go to state 20

state 14

    (9) TIPO -> EMPTY .

    PRINCIPAL       reduce using rule 9 (TIPO -> EMPTY .)
    FUNCION         reduce using rule 9 (TIPO -> EMPTY .)
    LBRACKET        reduce using rule 9 (TIPO -> EMPTY .)


state 15

    (3) PROG -> r_new_goto PROGRAMA ID SEMI_COLON VARS r_change_local_context FUNCTION . r_complete_goto r_change_global_context r_display_var_table MAIN r_display_const
    (116) r_complete_goto -> .

    PRINCIPAL       reduce using rule 116 (r_complete_goto -> .)

    r_complete_goto                shift and go to state 21

state 16

    (61) FUNCTION -> r_new_function . FUNCION TIPO_FUNC r_clear_mem ID r_set_fun_name r_new_vartable LPAREN PARAMETROS RPAREN VARS r_insert_parameters BLOQUE r_end_function FUNCTION

    FUNCION         shift and go to state 22


state 17

    (62) FUNCTION -> EMPTY .

    PRINCIPAL       reduce using rule 62 (FUNCTION -> EMPTY .)


state 18

    (6) TIPO -> INT r_set_var_type . VAR_INT SEMI_COLON TIPO
    (10) VAR_INT -> . LIST_ID COMMA VAR_INT
    (11) VAR_INT -> . ID r_new_variable COMMA VAR_INT
    (12) VAR_INT -> . LIST_ID
    (13) VAR_INT -> . ID r_new_variable
    (16) LIST_ID -> . ID r_new_arr LSQ CTE_I r_new_dim RSQ r_generate_arr r_clear_arr
    (17) LIST_ID -> . ID r_new_arr LSQ CTE_I r_new_dim RSQ LSQ CTE_I r_new_dim RSQ r_generate_arr r_clear_arr

    ID              shift and go to state 25

    VAR_INT                        shift and go to state 23
    LIST_ID                        shift and go to state 24

state 19

    (7) TIPO -> FLOAT r_set_var_type . VAR_TIPO SEMI_COLON TIPO
    (14) VAR_TIPO -> . ID r_new_variable COMMA
    (15) VAR_TIPO -> . ID r_new_variable

    ID              shift and go to state 27

    VAR_TIPO                       shift and go to state 26

state 20

    (8) TIPO -> CHAR r_set_var_type . VAR_TIPO SEMI_COLON TIPO
    (14) VAR_TIPO -> . ID r_new_variable COMMA
    (15) VAR_TIPO -> . ID r_new_variable

    ID              shift and go to state 27

    VAR_TIPO                       shift and go to state 28

state 21

    (3) PROG -> r_new_goto PROGRAMA ID SEMI_COLON VARS r_change_local_context FUNCTION r_complete_goto . r_change_global_context r_display_var_table MAIN r_display_const
    (142) r_change_global_context -> .

    PRINCIPAL       reduce using rule 142 (r_change_global_context -> .)

    r_change_global_context        shift and go to state 29

state 22

    (61) FUNCTION -> r_new_function FUNCION . TIPO_FUNC r_clear_mem ID r_set_fun_name r_new_vartable LPAREN PARAMETROS RPAREN VARS r_insert_parameters BLOQUE r_end_function FUNCTION
    (63) TIPO_FUNC -> . INT r_set_fun_type
    (64) TIPO_FUNC -> . FLOAT r_set_fun_type
    (65) TIPO_FUNC -> . CHAR r_set_fun_type
    (66) TIPO_FUNC -> . VOID r_set_fun_type

    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    CHAR            shift and go to state 33
    VOID            shift and go to state 34

    TIPO_FUNC                      shift and go to state 30

state 23

    (6) TIPO -> INT r_set_var_type VAR_INT . SEMI_COLON TIPO

    SEMI_COLON      shift and go to state 35


state 24

    (10) VAR_INT -> LIST_ID . COMMA VAR_INT
    (12) VAR_INT -> LIST_ID .

    COMMA           shift and go to state 36
    SEMI_COLON      reduce using rule 12 (VAR_INT -> LIST_ID .)


state 25

    (11) VAR_INT -> ID . r_new_variable COMMA VAR_INT
    (13) VAR_INT -> ID . r_new_variable
    (16) LIST_ID -> ID . r_new_arr LSQ CTE_I r_new_dim RSQ r_generate_arr r_clear_arr
    (17) LIST_ID -> ID . r_new_arr LSQ CTE_I r_new_dim RSQ LSQ CTE_I r_new_dim RSQ r_generate_arr r_clear_arr
    (140) r_new_variable -> .
    (145) r_new_arr -> .

    COMMA           reduce using rule 140 (r_new_variable -> .)
    SEMI_COLON      reduce using rule 140 (r_new_variable -> .)
    LSQ             reduce using rule 145 (r_new_arr -> .)

    r_new_variable                 shift and go to state 37
    r_new_arr                      shift and go to state 38

state 26

    (7) TIPO -> FLOAT r_set_var_type VAR_TIPO . SEMI_COLON TIPO

    SEMI_COLON      shift and go to state 39


state 27

    (14) VAR_TIPO -> ID . r_new_variable COMMA
    (15) VAR_TIPO -> ID . r_new_variable
    (140) r_new_variable -> .

    COMMA           reduce using rule 140 (r_new_variable -> .)
    SEMI_COLON      reduce using rule 140 (r_new_variable -> .)

    r_new_variable                 shift and go to state 40

state 28

    (8) TIPO -> CHAR r_set_var_type VAR_TIPO . SEMI_COLON TIPO

    SEMI_COLON      shift and go to state 41


state 29

    (3) PROG -> r_new_goto PROGRAMA ID SEMI_COLON VARS r_change_local_context FUNCTION r_complete_goto r_change_global_context . r_display_var_table MAIN r_display_const
    (143) r_display_var_table -> .

    PRINCIPAL       reduce using rule 143 (r_display_var_table -> .)

    r_display_var_table            shift and go to state 42

state 30

    (61) FUNCTION -> r_new_function FUNCION TIPO_FUNC . r_clear_mem ID r_set_fun_name r_new_vartable LPAREN PARAMETROS RPAREN VARS r_insert_parameters BLOQUE r_end_function FUNCTION
    (124) r_clear_mem -> .

    ID              reduce using rule 124 (r_clear_mem -> .)

    r_clear_mem                    shift and go to state 43

state 31

    (63) TIPO_FUNC -> INT . r_set_fun_type
    (127) r_set_fun_type -> .

    ID              reduce using rule 127 (r_set_fun_type -> .)

    r_set_fun_type                 shift and go to state 44

state 32

    (64) TIPO_FUNC -> FLOAT . r_set_fun_type
    (127) r_set_fun_type -> .

    ID              reduce using rule 127 (r_set_fun_type -> .)

    r_set_fun_type                 shift and go to state 45

state 33

    (65) TIPO_FUNC -> CHAR . r_set_fun_type
    (127) r_set_fun_type -> .

    ID              reduce using rule 127 (r_set_fun_type -> .)

    r_set_fun_type                 shift and go to state 46

state 34

    (66) TIPO_FUNC -> VOID . r_set_fun_type
    (127) r_set_fun_type -> .

    ID              reduce using rule 127 (r_set_fun_type -> .)

    r_set_fun_type                 shift and go to state 47

state 35

    (6) TIPO -> INT r_set_var_type VAR_INT SEMI_COLON . TIPO
    (6) TIPO -> . INT r_set_var_type VAR_INT SEMI_COLON TIPO
    (7) TIPO -> . FLOAT r_set_var_type VAR_TIPO SEMI_COLON TIPO
    (8) TIPO -> . CHAR r_set_var_type VAR_TIPO SEMI_COLON TIPO
    (9) TIPO -> . EMPTY
    (1) EMPTY -> .

    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    CHAR            shift and go to state 13
    PRINCIPAL       reduce using rule 1 (EMPTY -> .)
    FUNCION         reduce using rule 1 (EMPTY -> .)
    LBRACKET        reduce using rule 1 (EMPTY -> .)

    TIPO                           shift and go to state 48
    EMPTY                          shift and go to state 14

state 36

    (10) VAR_INT -> LIST_ID COMMA . VAR_INT
    (10) VAR_INT -> . LIST_ID COMMA VAR_INT
    (11) VAR_INT -> . ID r_new_variable COMMA VAR_INT
    (12) VAR_INT -> . LIST_ID
    (13) VAR_INT -> . ID r_new_variable
    (16) LIST_ID -> . ID r_new_arr LSQ CTE_I r_new_dim RSQ r_generate_arr r_clear_arr
    (17) LIST_ID -> . ID r_new_arr LSQ CTE_I r_new_dim RSQ LSQ CTE_I r_new_dim RSQ r_generate_arr r_clear_arr

    ID              shift and go to state 25

    LIST_ID                        shift and go to state 24
    VAR_INT                        shift and go to state 49

state 37

    (11) VAR_INT -> ID r_new_variable . COMMA VAR_INT
    (13) VAR_INT -> ID r_new_variable .

    COMMA           shift and go to state 50
    SEMI_COLON      reduce using rule 13 (VAR_INT -> ID r_new_variable .)


state 38

    (16) LIST_ID -> ID r_new_arr . LSQ CTE_I r_new_dim RSQ r_generate_arr r_clear_arr
    (17) LIST_ID -> ID r_new_arr . LSQ CTE_I r_new_dim RSQ LSQ CTE_I r_new_dim RSQ r_generate_arr r_clear_arr

    LSQ             shift and go to state 51


state 39

    (7) TIPO -> FLOAT r_set_var_type VAR_TIPO SEMI_COLON . TIPO
    (6) TIPO -> . INT r_set_var_type VAR_INT SEMI_COLON TIPO
    (7) TIPO -> . FLOAT r_set_var_type VAR_TIPO SEMI_COLON TIPO
    (8) TIPO -> . CHAR r_set_var_type VAR_TIPO SEMI_COLON TIPO
    (9) TIPO -> . EMPTY
    (1) EMPTY -> .

    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    CHAR            shift and go to state 13
    PRINCIPAL       reduce using rule 1 (EMPTY -> .)
    FUNCION         reduce using rule 1 (EMPTY -> .)
    LBRACKET        reduce using rule 1 (EMPTY -> .)

    TIPO                           shift and go to state 52
    EMPTY                          shift and go to state 14

state 40

    (14) VAR_TIPO -> ID r_new_variable . COMMA
    (15) VAR_TIPO -> ID r_new_variable .

    COMMA           shift and go to state 53
    SEMI_COLON      reduce using rule 15 (VAR_TIPO -> ID r_new_variable .)


state 41

    (8) TIPO -> CHAR r_set_var_type VAR_TIPO SEMI_COLON . TIPO
    (6) TIPO -> . INT r_set_var_type VAR_INT SEMI_COLON TIPO
    (7) TIPO -> . FLOAT r_set_var_type VAR_TIPO SEMI_COLON TIPO
    (8) TIPO -> . CHAR r_set_var_type VAR_TIPO SEMI_COLON TIPO
    (9) TIPO -> . EMPTY
    (1) EMPTY -> .

    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    CHAR            shift and go to state 13
    PRINCIPAL       reduce using rule 1 (EMPTY -> .)
    FUNCION         reduce using rule 1 (EMPTY -> .)
    LBRACKET        reduce using rule 1 (EMPTY -> .)

    TIPO                           shift and go to state 54
    EMPTY                          shift and go to state 14

state 42

    (3) PROG -> r_new_goto PROGRAMA ID SEMI_COLON VARS r_change_local_context FUNCTION r_complete_goto r_change_global_context r_display_var_table . MAIN r_display_const
    (2) MAIN -> . PRINCIPAL r_flush_mem LPAREN RPAREN BLOQUE

    PRINCIPAL       shift and go to state 56

    MAIN                           shift and go to state 55

state 43
